Added new photo to folder, changed image in article 8. Adjusted height for the entire news container section in tablet view and adjusted height for each article box. In the HTML file I added new divs around the h3 and p in each news box to add padding here. Changed justify content for the news class to flex start.

--- a/code/index.html
+++ b/code/index.html
@@ -42,59 +42,73 @@
       <div class="news">
         <a href="article2.html"> <!--Add anchor to separate article page-->
           <img src="photos/implants.jpg" alt="Picture of a dental implant">
-          <h3>Dental implants - what's new on the market?</h3>
-          <p>Here are the latest news regarding dental implants.</p>
+          <div>
+            <h3>Dental implants - what's new on the market?</h3>
+            <p>Here are the latest news regarding dental implants.</p>
+          </div>
         </a>
       </div>
 
       <div class="news">
         <a href="article3.html"> <!--Add anchor to separate article page-->
           <img src="photos/invisalign.jpg" alt="Picture of girl putting on invisalign braces">
-          <h3>Pros and cons of Invisalign braces</h3>
-          <p>Virtually invisible. Unlike traditional braces, the Invisalign system
+          <div>
+            <h3>Pros and cons of Invisalign braces</h3>
+            <p>Virtually invisible. Unlike traditional braces, the Invisalign system
             doesn't use wires or brackets. </p>
+          </div>
         </a>
       </div>
 
       <div class="news">
         <a href="article4.html"> <!--Add anchor to separate article page-->
           <img src="photos/child.jpg" alt="Picture of a young child holding a toothbrush">
-          <h3>New guidelines in pediatric dentistry from January 2021</h3>
-          <p>Read the new guidelines.</p>
+          <div>
+            <h3>New guidelines in pediatric dentistry from January 2021</h3>
+            <p>Read the new guidelines.</p>
+          </div>
         </a>
       </div>
 
       <div class="news">
         <a href="article5.html"> <!--Add anchor to separate article page-->
           <img src="photos/dentalclinic.jpg" alt="Picture of a dental clinic">
-          <h3>COVID-19 - one year later</h3>
-          <p>How has the pandemic affected small private practices around the country?</p>
+          <div>
+            <h3>COVID-19 - one year later</h3>
+            <p>How has the pandemic affected small private practices around the country?</p>
+          </div>
         </a>
       </div>
 
       <div class="news">
         <a href="article6.html"> <!--Add anchor to separate article page-->
           <img src="photos/electricscooter.jpg" alt="Picture of an electric scooter">
-          <h3>High increase of dental traumas due to the use of electric scooters</h3>
-          <p>Emergency clinics have seen a high increase of dental traumas since the broad launch
+          <div>
+            <h3>High increase of dental traumas due to the use of electric scooters</h3>
+            <p>Emergency clinics have seen a high increase of dental traumas since the broad launch
             of electric scooters.</p>
+          </div>
         </a>
       </div>
 
       <div class="news">
         <a href="article7.html"> <!--Add anchor to separate article page-->
           <img src="photos/humble.jpg" alt="Picture of toothbrushed from Humble Co">
-          <h3>Humble Co</h3>
-          <p>For healthier people, on a healthier planet. Humble Co is leading an eco-friendly
+          <div>
+            <h3>Humble Co</h3>
+            <p>For healthier people, on a healthier planet. Humble Co is leading an eco-friendly
             revolution in dental hygiene products.</p>
+          </div>
         </a>
       </div>
 
       <div class="news">
         <a href="article8.html"> <!--Add anchor to separate article page-->
-          <img src="photos/electrictoothbrush.jpg" alt="Picture of electric toothbrushes">
-          <h3>Top 10 best electric toothbrushes in 2021</h3>
-          <p>Read the test here.</p>
+          <img src="photos/electrictoothbrush2.jpg" alt="Picture of electric toothbrushes">
+          <div>
+            <h3>Top 10 best electric toothbrushes in 2021</h3>
+            <p>Read the test here.</p>
+          </div>
         </a>
       </div>
 
