--- a/code/article6.html
+++ b/code/article6.html
@@ -18,7 +18,7 @@
       <div class="article-container">
         <img src="photos/electricscooter.jpg" alt="Picture of an electric scooter">
         <div>
-          <h3>Dental traumas due to the use of electric scooters</h3>
+          <h3>High increase of dental traumas due to the use of electric scooters</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
             dolore
             magna aliqua.
