add logo header and section class flexboss

--- a/code/index.html
+++ b/code/index.html
@@ -12,10 +12,16 @@
 
   <body>
 
-    <header>
       <!-- Some kind of logo and navbar -->
 
-    <h1>THE ART WOLFPAPERS</h1>
+
+    <div class="header">
+
+      
+
+      </div>
+
+      <h1><img class="wolf" src="wolf.png" alt="wolf logo"> THE ART WOLFPAPERS</h1>
 
     
   <ul>
@@ -109,9 +115,20 @@
 
 </section>
 
+<section class="flex-bosstwo"> 
+
+<div class="flex-bossone despite"><b><p>Painting</p></b><p>Despite its 'hybrid' approach the Met's catalogue on French
+  painting lacks detailed analysis</p> </div>
+
+<div class="flex-bossone the"><b><p>Exhibition</p></b>
+  <p>The case is made for connoisseurs and their role in art history</p> </div>
+
+<div class="flex-bossone books"><b><p>Book Club</p></b><p>Book on Bellini proves more truth and false</p> </div>
+
+<div class="flex-bossone learn"><b><p>Book Club</p></b><p>Learn the techniques with Tom Browning</p> </div>
 
  
-
+</section>
 
   </body>
 
