Changed title article 6. Changed height for news boxes in both tablet view and desktop view. Removed padding between image and heading in news boxes.

--- a/code/index.html
+++ b/code/index.html
@@ -84,7 +84,7 @@
         <a href="article6.html"> <!--Add anchor to separate article page-->
           <img src="photos/electricscooter.jpg" alt="Picture of an electric scooter">
           <div>
-            <h3>High increase of dental traumas due to the use of electric scooters</h3>
+            <h3>Dental traumas</h3>
             <p>Emergency clinics have seen a high increase of dental traumas since the broad launch
             of electric scooters.</p>
           </div>
