ändrar på header

--- a/code/index.html
+++ b/code/index.html
@@ -48,7 +48,7 @@
         <div class="dropdown-content">
         <a class="home2" href="#home">Home</a>
         <a class="one2" href="#news">News</a>
-        <a class="two" href="#contact">Contact</a>
+        <a class="culture" href="#contact">Contact</a>
         </div>
       </div> 
 
@@ -114,7 +114,23 @@
         </div>
       </div>
       <div class="flex-child two">
-      
+        <img src="https://upload.wikimedia.org/wikipedia/commons/1/1d/Taj_Mahal_%28Edited%29.jpeg" alt="Avatar" class="test2">
+        <div class="overlay">
+          <div class="text">
+            <p>
+              
+              <a href="url">
+                Lorum Ipsum Lor Ipsum Lorum Ipsum
+                Lorum Ipsum Lor Ipsum Lorum Ipsum
+                Lorum Ipsum Lor Ipsum Lorum Ipsum
+                Lorum Ipsum Lor Ipsum Lorum Ipsum....
+                <br> <b>Click to read more</b> 
+
+              </a>
+            </p> 
+
+          </div>
+        </div>
 
       </div>
       <div class="flex-child three"></div>
