--- a/code/index.html
+++ b/code/index.html
@@ -29,16 +29,16 @@
       <div class="ul1">
         <ul>
           <li><a class="home1" href="#home">Home</a></li>
-          <li><a class="one1" href="#news">News</a></li>
+          <li><a class="politics1" href="#news">News</a></li>
         </ul>
       </div>
       <div class="flex-child white"> <img src=logo.svg /> </div>
       <div>
         <ul class="ul2">
           <li><a class="home2" href="#home">Home</a></li>
-          <li><a class="one2" href="#news">News</a></li>
-          <li><a class="two" href="#contact">Contact</a></li>
-          <li><a class="three" href="#about">About</a></li>
+          <li><a class="politics" href="#news">Politics</a></li>
+          <li><a class="sport" href="#contact">Sport</a></li>
+          <li><a class="culture" href="#about">Culture</a></li>
         </ul>
       </div>  
 
@@ -46,9 +46,10 @@
       <div class="dropdown">
         <button class="dropbtn"><img src="https://cdn2.iconfinder.com/data/icons/music-player-icons-line/45/Menu_Bar-512.png" alt=""></button>
         <div class="dropdown-content">
-        <a class="home2" href="#home">Home</a>
-        <a class="one2" href="#news">News</a>
-        <a class="culture" href="#contact">Contact</a>
+        <!-- home2 --><a class="home2" href="#home">Home</a>
+        <a class="politics" href="#news">Politics</a></li>
+        <!-- one2 --><a class="sport" href="#news">Sport</a>
+        <!-- two --> <a class="culture" href="#contact">Culture</a>
         </div>
       </div> 
 
