--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,112 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
+<head>
+  <meta charset="utf-8" />
+  <title>Project 2: The News Site</title>
+  <link rel="stylesheet" href="./style.css" />
+  <!-- dont forget the meta tag for responsiveness -->
+</head>
+
+<body>
+  <header>
+    <!-- Some kind of logo and navbar -->
+    <img class=logo src="logo.svg">
+    <h1>News</h1>
+
+    <div class="hamburger">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+
+    <nav>
+      <a href="/meny/">Menu</a>
+      <a href="/Sign up/">Sign up</a>
+      <a href="Connect/">Connect</a>
+    </nav>
+
+  </header>
+
+  <section class="big-news">
+    <!-- The big news content -->
+    <section class="main-big-news">
+      <img src="nice-life.jpg" alt="cliffs and ocean">
+      <article class="article">
+        <h2>A beautiful life</h2>
+        <p>And some text, bl bl bl </p>
+      </article>
+    </section>
+  </section>
+
+  <section class="small-news">
+    <!-- The other news  -->
+
+
+    <section class="news">
+      <div>
+        <a href="a">
+          <img src="a" alt="a">
+          <h5>Rubrik</h5>
+          <p>text text text</p>
+        </a>
+      </div>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="news">
+      <div>
+        <a href="a">
+          <img src="a" alt="a">
+          <h5>Rubrik</h5>
+          <p>text text text</p>
+        </a>
+      </div>
     </section>
-  </body>
+
+    <section class="news">
+      <div>
+        <a href="a">
+          <img src="a" alt="a">
+          <h5>Rubrik</h5>
+          <p>text text text</p>
+        </a>
+      </div>
+    </section>
+
+    <section class="news">
+      <div>
+        <a href="a">
+          <img src="a" alt="a">
+          <h5>Rubrik</h5>
+          <p>text text text</p>
+        </a>
+      </div>
+    </section>
+
+    <section class="news">
+      <div>
+        <a href="a">
+          <img src="a" alt="a">
+          <h5>Rubrik</h5>
+          <p>text text text</p>
+        </a>
+      </div>
+    </section>
+
+    <section class="news">
+      <div>
+        <a href="a">
+          <img src="a" alt="a">
+          <h5>Rubrik</h5>
+          <p>text text text</p>
+        </a>
+      </div>
+    </section>
+
+
+
+  </section>
+
+</body>
+
 </html>
