Changed box shadow on all of the boxes to create a smoother shadow. Added border radius to each box. Changed class name for header in separate html filesto be more clear.

--- a/code/article1.html
+++ b/code/article1.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header class="articles">
+    <header class="articles-header">
         <a href="index.html"><img src="photos/dentnews.png" alt="Dentnews Logo"></a>
     </header>
 
