--- a/code/article8.html
+++ b/code/article8.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-    <header class="articles">
+    <header class="articles-header">
         <a href="index.html"><img src="photos/dentnews.png" alt="Dentnews Logo"></a>
     </header>
 
     <section>
         <article>
             <div class="article-container">
-                <img src="photos/electrictoothbrush.jpg" alt="Picture of electric toothbrushes">
+                <img src="photos/electrictoothbrush2.jpg" alt="Picture of electric toothbrushes">
                 <div>
                     <h3>Top 10 best electric toothbrushes in 2021</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
