--- a/code/contact.html
+++ b/code/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-    <header class="articles">
+    <header class="contact-header">
         <a href="index.html"><img src="photos/dentnews.png" alt="Dentnews Logo"></a>
     </header>
 
