--- a/code/article7.html
+++ b/code/article7.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header class="articles">
+    <header class="articles-header">
         <a href="index.html"><img src="photos/dentnews.png" alt="Dentnews Logo"></a>
     </header>
 
