Responsive navigation bar added

--- a/code/index.html
+++ b/code/index.html
@@ -11,13 +11,32 @@
   <body>
     <header>
       <!-- Logo, hamburger menu and navbar -->
-      <img src="./logo.svg" alt="Logo">
-      <nav>
-        <a href="">Home</a> |
-        <a href="">Highlights</a> |
-        <a href="">News</a> |
-        <a href="">More</a> |
-      </nav>
+      <div class="header-phone">
+        <img src="./logo.svg" alt="Logo">
+        <div class="hamburger">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+      <div class= "header-desktop">
+        <img src="./logo.svg" alt="Logo">
+        <nav class="nav-desktop">
+          <a href="">Home</a> |
+          <a href="">Highlights</a> |
+          <a href="">News</a> |
+          <a href="">More</a> |
+        </nav>
+      </div>
+      <div class="header-tablet">
+        <nav class="nav-tablet">
+          <a href="">Home</a>
+          <a href="">Highlights</a>
+          <a href= ""> <img src="./logo.svg" alt="Logo"> </a>
+          <a href="">News</a>
+          <a href="">More</a> 
+        </nav>
+      </div>
 
     </header>
 
@@ -74,5 +93,9 @@
         </div>
       </section>
     </section>
+    <footer>
+
+    </footer>
+
   </body>
 </html>
