--- a/code/index.html
+++ b/code/index.html
@@ -8,7 +8,13 @@
   </head>
   <body>
     <header>
-      <h1>TEST TITLE</h1>
+      <div>
+      <div class="header">
+      <div class="logo">
+        <img src="logo.svg" alt="Logo Image">
+      
+      </div>
+     
       <!-- Some kind of logo and navbar -->
     </header>
 
