Main Grid layout & Header content grid layout

--- a/code/index.html
+++ b/code/index.html
@@ -9,18 +9,39 @@
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <h1 class="title">Lorem Ipsum</h1>
+      <!-- Promotional Content (viewed on both sides of logo) -->
+      <!-- Shown by default; hidden in mobile -->
+      <figure class="promo-1">promo1</figure>
+      <figure class="promo-2">promo2</figure>
+      <nav class="nav-links">links</nav>
+      <!-- Shown in mobile -->
+      <button class="btn-side-nav">hamburger</button>
     </header>
 
-    <section class="big-news">
-      <img src="https://source.unsplash.com/daily/?/" alt="" />
-      <img src="https://source.unsplash.com/daily/?1/" alt="" />
-      <img src="https://source.unsplash.com/daily/?2/" alt="" />
-      <img src="https://source.unsplash.com/daily/?3/" alt="" />
+    <section class="hero">
+      <!-- Featured articles -->
+      feature articles
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="news-mosiac">
+      <!-- Main content; Mosaic news -->
+      mosiac news
     </section>
+
+    <section class="news-column">
+      <!-- Main Content; News column -->
+      news column
+    </section>
+
+    <section class="news-list">
+      <!-- Extra Content; List of other news -->
+      news list
+    </section>
+
+    <footer>
+      <!-- Links in 2 columns -->
+      footer
+    </footer>
   </body>
 </html>
