--- a/code/index.html
+++ b/code/index.html
@@ -34,7 +34,19 @@
       <img src="nice-life.jpg" alt="cliffs and ocean">
       <article class="article">
         <h2>A beautiful life</h2>
-        <p>And some text, bl bl bl </p>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+          Aenean commodo ligula eget dolor. Aenean massa. 
+          Cum sociis natoque penatibus et magnis dis parturient montes, 
+          nascetur ridiculus mus. Donec quam felis, ultricies nec, 
+          pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. 
+          Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. 
+          In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. 
+          Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. 
+          Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. 
+          Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. 
+          Aliquam lorem ante, dapibus in, viverra quis, feugiat a.
+
+        </p>
       </article>
     </section>
   </section>
