--- a/code/index.html
+++ b/code/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css"/>
     <script src="https://kit.fontawesome.com/4bfe1de3df.js" crossorigin="anonymous"></script>
@@ -12,32 +12,30 @@
     <title>XOXO Magazine</title>
   </head>
   <body>  
+    
     <div class="banner">
-      <marquee behavior="alternate" direction="left"><a href="">Sign up for more beaty & fashion news</a></marquee>
+      <marquee behavior="alternate" direction="left"><a href="#">Sign up for more beaty & fashion news</a></marquee>
     </div> 
 
-    <header class="menu">
-      <section class="menu-icon">
+    <header>
+      <div class="hamburger">
         <div></div>
         <div></div>
         <div></div>
-      </section>
-
-      <nav>
-        <ul>
-          <li><a href="#start">Beauty</a></li>
-          <li><a href="">Health</a></li>
-          <a id="img-hover" href=""><img class="logo" src="Images/NEWS.png" alt="Xoxo Magazine logo"></a>
-          <li><a href="">Newsletter</a></li>
-          <li><a href="">Get in touch</a></li>
-        </ul>
+      </div>
+      <img class="logo" src="Images/NEWS.png" alt="Xoxo Magazine logo"/>
+      <nav name="top">
+          <a href="#">Beauty</a>
+          <a href="#">Health</a>
+          <a href="#">Newsletter</a>
+          <a href="#">Get in touch</a>
       </nav>
     </header>  
   
-    <article class="big-news">   
+    <section class="big-news">   
       <div class="img-container">
-        <div class="polaroid image1" polaroid-caption="#Chanel">
-          <img src="Images/Chanel-3.jpeg" width="500px" alt="Chanel parfym img" onmouseover="this.src='Images/Chanel-4.jpeg'" onmouseout="this.src='Images/Chanel-3.jpeg'">
+        <div class="polaroid" polaroid-caption="#Chanel">
+          <img src="Images/Chanel-3.jpeg" alt="Chanel parfym image" onmouseover="this.src='Images/Chanel-4.jpeg'" onmouseout="this.src='Images/Chanel-3.jpeg'"/>
         </div>
       </div>
 
@@ -45,78 +43,76 @@
         <h1>The new <span style="color:#FF13A7;">CHANEL</span> fragrance is here!</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
-    </article> 
+    </section> 
 
-    <h1 id="news-header">All the latest <span style="color:#FF13A7;">news</span></h1>
-    <section class="grid-container">
-      <article class="item">
-        <img class="image" src="Images/img1.jpeg" alt="Image">
-        <div class="img-description">
-          <a href=""><p class="text">Read more</p></a>
-        </div>
-        <h3>Best makeup brushes and how you keep them cleen</h3>
-        <h5>16 April, 2021</h5>
-      </article>
-
-      <article class="item">
-        <img class="image" src="Images/img2.jpeg" alt="Image">
-        <div class="img-description">
-          <a href=""><p class="text">Read more</p></a>
-        </div>
-        <h3>What every magazin is talking about right now</h3>
-        <h5>13 April, 2021</h5>
-      </article>
-
-      <article class="item">
-        <img class="image" src="Images/img3.jpeg" alt="Image">
-        <div class="img-description">
-          <a href=""><p class="text">Read more</p></a>
-        </div>
-        <h3>Bobbo Brown is the winner for the best bronzer in 2020</h3>
-        <h5>20 Mars, 2021</h5>
-      </article>
-
-      <article class="item">
-        <img class="image" src="Images/img4.jpeg" alt="Image">
-        <div class="img-description">
-          <a href=""><p class="text">Read more</p></a>
-        </div>
-        <h3>Yoga is the most popular goal for 2021 and here is why</h3>
-        <h5>30 January, 2021</h5>
-      </article>
-
-      <article class="item">
-        <img class="image" src="Images/img5.jpeg" alt="Image">
-        <div class="img-description">
-          <a href=""><p class="text">Read more</p></a>
-        </div>
-        <h3>Nail colors for summer 2021 and post corona</h3>
-        <h5>29 January, 2021</h5>
-      </article>
-
-      <article class="item">
-        <img class="image" src="Images/img6.jpeg" alt="Image">
-        <div class="img-description">
-          <a href=""><p class="text">Read more</p></a>
-        </div>
-        <h3>Shoping on Drottninggatan or online? Here is what everyone prefers</h3>
-        <h5>16 April, 2021</h5>
-      </article>
+    <section class="regular-news">
+      <h1>All the latest <span style="color:#FF13A7;">news</span></h1>
+      <div class="grid-container">
+        <article class="item">
+          <img class="image" src="Images/img1.jpeg" alt="Image with brushes"/>
+          <div class="img-description">
+            <a href="#"><p class="text">Read more</p></a>
+          </div>
+          <h3>Best makeup brushes and how you keep them cleen</h3>
+          <h5>16 April, 2021</h5>
+        </article> 
+        <article class="item">
+          <img class="image" src="Images/img2.jpeg" alt="Image with magazins"/>
+          <div class="img-description">
+            <a href="#"><p class="text">Read more</p></a>
+          </div>
+          <h3>What every magazin is talking about right now</h3>
+          <h5>13 April, 2021</h5>
+        </article>  
+        <article class="item">
+          <img class="image" src="Images/img3.jpeg" alt="Image with bobbi brown makeup"/>
+          <div class="img-description">
+            <a href="#"><p class="text">Read more</p></a>
+          </div>
+          <h3>Bobbi Brown is the winner for the best bronzer in 2020</h3>
+          <h5>20 Mars, 2021</h5>
+        </article> 
+        <article class="item">
+          <img class="image" src="Images/img4.jpeg" alt="Image with yoga"/>
+          <div class="img-description">
+            <a href="#"><p class="text">Read more</p></a>
+          </div>
+          <h3>Yoga is the most popular goal for 2021 and here is why</h3>
+          <h5>30 January, 2021</h5>
+        </article> 
+        <article class="item">
+          <img class="image" src="Images/img5.jpeg" alt="Image with orange nails"/>
+          <div class="img-description">
+            <a href="#"><p class="text">Read more</p></a>
+          </div>
+          <h3>Nail colors for summer 2021 and post corona</h3>
+          <h5>29 January, 2021</h5>
+        </article> 
+        <article class="item">
+          <img class="image" src="Images/img6.jpeg" alt="Image with shoping bags"/>
+          <div class="img-description">
+            <a href="#"><p class="text">Read more</p></a>
+          </div>
+          <h3>Shoping on Drottninggatan or online? Here is what everyone prefers</h3>
+          <h5>16 April, 2021</h5>
+        </article>
+      </div>
     </section>
 
-    <div class="direction-icon text-center">
-      <a id="star" href="">
+
+    <div class="direction-icon">
+      <a href="#top">
         <i class="fas fa-angle-double-up fa-2x"></i>
       </a>   
     </div>   
 
-    <footer class="footer">
+    <footer>
       <div class="icons">
-        <a href=""><i class="fab fa-facebook-square fa-2x"></i></a>
-        <a href=""><i class="fab fa-instagram fa-2x"></i></a>
-        <a href=""><i class="fab fa-linkedin fa-2x"></i></a>
-        <a href=""><i class="fas fa-envelope-square fa-2x"></i></a>
-        <input type="text" placeholder="Search..">
+        <a href="#"><i class="fab fa-facebook-square fa-2x"></i></a>
+        <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+        <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
+        <a href="#"><i class="fas fa-envelope-square fa-2x"></i></a>
+        <input type="text" placeholder="Search...">
       </div>
     </footer>
 
