Added dropdown menu

--- a/code/index.html
+++ b/code/index.html
@@ -13,10 +13,23 @@
       <!-- Logo, hamburger menu and navbar -->
       <div class="header-phone">
         <img src="./logo.svg" alt="Logo">
-        <div class="hamburger">
-          <div></div>
-          <div></div>
-          <div></div>
+        <div class="checkbox">
+          <input type="checkbox" id="hamburger">
+          <label for="hamburger">
+            <div></div>
+            <div></div>
+            <div></div>
+          </label>
+          <div class= "dropdown-menu">
+            <div class="dropdown-conent">
+              <nav class="dropdown">
+                  <a href="">Home</a>
+                  <a href="">Highlights</a>
+                  <a href="">News</a>
+                  <a href="">More</a>
+              </nav>
+            </div>
+          </div>
         </div>
       </div>
       <div class= "header-desktop">
@@ -37,7 +50,6 @@
           <a href="">More</a> 
         </nav>
       </div>
-
     </header>
 
     <section class="big-news"> <!-- The big news content -->
