Grid Layout for Hero & news mosiac section

--- a/code/index.html
+++ b/code/index.html
@@ -19,22 +19,33 @@
       <button class="btn-side-nav">hamburger</button>
     </header>
 
-    <section class="hero">
+    <section id="hero">
       <!-- Featured articles -->
-      feature articles
+      <article class="large">Large</article>
+      <article class="medium">Medium</article>
+      <article class="small-1">Small-1</article>
+      <article class="small-2">Small-2</article>
     </section>
 
-    <section class="news-mosiac">
+    <section id="news-mosiac">
       <!-- Main content; Mosaic news -->
-      mosiac news
+      <article class="mosiac-item">Small</article>
+      <article class="mosiac-item span-2">MEDIUM</article>
+      <article class="mosiac-item">Small</article>
+      <article class="mosiac-item">Small</article>
+      <article class="mosiac-item">Small</article>
+      <article class="mosiac-item">Small</article>
+      <article class="mosiac-item">Small</article>
+      <article class="mosiac-item span-2">MEDIUM</article>
+      <article class="mosiac-item">Small</article>
     </section>
 
-    <section class="news-column">
+    <section id="news-column">
       <!-- Main Content; News column -->
       news column
     </section>
 
-    <section class="news-list">
+    <section id="news-list">
       <!-- Extra Content; List of other news -->
       news list
     </section>
