styling big news section for desktop

--- a/code/index.html
+++ b/code/index.html
@@ -10,7 +10,8 @@
 
 <body>
   <header>
-    <!-- logo and navbar -->
+    <!-- logo and navbar. Dived logo and links in to different elements to use justify-content:space-between 
+      when styling to place the logo to the left and the list to the right-->
     <img class="logo" src="logo.svg" alt="logo">
     <nav>
       <ul class="nav-links">
@@ -30,11 +31,18 @@
     <!-- The big news section -->
     <section class="big-news-container">
       <div class="big-news-img">
-        <img>
+        <img src="img.jpg" alt="image">
       </div>
       <div class="big-news-text">
-        <h1></h1>
-        <p></p>
+        <h1>En rubrik i stora bokstäver</h1>
+        <p>Hlacus sagittis, lobortis in at non, tempor. Orci eu, proin dui nibh et. 
+          Facilisi ut in ullamcorper vivamus convallis mauris in viverra phasellus. 
+          Sed sagittis, ut quis ullamcorper morbi gravida consequat vitae. Diam, 
+          turpis non pretium sit eget adipiscing diam enim, ornare. Urna, ac neque 
+          amet consequat sed vitae a. Tellus amet nulla in id ultricies orci, ultrices 
+          pellentesque in. Duis porttitor consequat nunc velit, aliquam. Ultricies 
+          augue fringilla vitae ut aenean.</p>
+          <button>Läs mer</button>
       </div>
     </section>
     <!-- Most recent news section -->
