new colors, new logo

--- a/code/index.html
+++ b/code/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Project 2: The News Site</title>
+  <title>Island Life</title>
   <link rel="stylesheet" href="./style.css" />
   <!-- dont forget the meta tag for responsiveness -->
 </head>
@@ -11,8 +11,8 @@
 <body>
   <header>
     <!-- Some kind of logo and navbar -->
-    <img class=logo src="logo.svg">
-    <h1>News</h1>
+    <img class=logo src="Summer-Palm-Tree-1-2015060917.svg">
+    <h1>Island Life</h1>
 
     <div class="hamburger">
       <div></div>
@@ -58,7 +58,17 @@
     <section class="news">
       <div>
         <a href="a">
-          <img src="a" alt="a">
+          <img src="SUP.jpg" alt="SUP on ocean">
+          <h5>Rubrik</h5>
+          <p>text text text</p>
+        </a>
+      </div>
+    </section>
+
+    <section class="news">
+      <div>
+        <a href="A">
+          <img src="SUP.jpg" alt="SUP on ocean">
           <h5>Rubrik</h5>
           <p>text text text</p>
         </a>
@@ -68,7 +78,7 @@
     <section class="news">
       <div>
         <a href="a">
-          <img src="a" alt="a">
+          <img src="SUP.jpg" alt="SUP on ocean">
           <h5>Rubrik</h5>
           <p>text text text</p>
         </a>
@@ -78,7 +88,7 @@
     <section class="news">
       <div>
         <a href="a">
-          <img src="a" alt="a">
+          <img src="yoga.jpg" alt="yoga pose">
           <h5>Rubrik</h5>
           <p>text text text</p>
         </a>
@@ -88,7 +98,7 @@
     <section class="news">
       <div>
         <a href="a">
-          <img src="a" alt="a">
+          <img src="yoga.jpg" alt="yoga pose">
           <h5>Rubrik</h5>
           <p>text text text</p>
         </a>
@@ -98,17 +108,7 @@
     <section class="news">
       <div>
         <a href="a">
-          <img src="a" alt="a">
-          <h5>Rubrik</h5>
-          <p>text text text</p>
-        </a>
-      </div>
-    </section>
-
-    <section class="news">
-      <div>
-        <a href="a">
-          <img src="a" alt="a">
+          <img src="yoga.jpg" alt="yoga pose">
           <h5>Rubrik</h5>
           <p>text text text</p>
         </a>
