--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,7 @@
     <div class="header-wrapper">
     <nav>
       <input type="checkbox" id="checkbox" >
-      <label for="checkbox"><i class="menu-button"></i>
+      <label for="checkbox"><a class="menu-button"></a>
       </label>
       <div class="menu-content"> 
         <a href="contact.html" target="blank">contact</a>
