add big news part and make it responsive

--- a/code/index.html
+++ b/code/index.html
@@ -17,6 +17,7 @@
     <script src="./app.js"></script>
   </head>
   <body>
+    <!-- START HEADER -->
     <header class="main-header">
       <div class="main-wrapper">
         <div class="desktop-menu-cnt">
@@ -46,11 +47,38 @@
         </div>
       </div>
     </header>
-    <section class="big-news">The big news content</section>
+    <!-- END HEADER -->
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
+    <!-- START MAIN PART OF PAGE -->
+    <main class="main-part">
+      <div class="main-wrapper">
+        <section class="big-news">
+          <a href="" class="block big-news-img">
+            <img
+              src="https://miro.medium.com/max/1620/1*D73DS9prCslFeWWNNmlcnQ.jpeg"
+              alt="The 7 JS Array Methods you will need in 2021"
+              class="res-img"
+            />
+          </a>
+          <div class="big-news-content">
+            <h1>
+              <a href="" class="news-title">
+                The 7 JS Array Methods you will need in 2021</a
+              >
+            </h1>
+            <p class="news-subtitle">
+              Get a great start off your year learning these useful methods
+            </p>
+          </div>
+        </section>
+
+        <section class="">
+          <!-- The other news  -->
+        </section>
+      </div>
+    </main>
+    <!-- END OF MAIN PART OF PAGE -->
+
     <footer></footer>
   </body>
 </html>
