Created nav bar and a header

--- a/code/index.html
+++ b/code/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
@@ -9,10 +10,19 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
-      <img src="logo.svg" >      
+      <div class="img-container-logo">
+       <img src="assets/Circle-Forset-Night-bw (1).png" width="180px" height="180px">
+      </div>
+      <h2>HIKING</h2>
+      <nav>
+        <a href="#">Desktop</a>
+        <a href="#">Tablet</a>
+        <a href="#">Mobile</a>
+      </nav>      
     </header>
-    <div class="desktop-box">
-
+    
+    
+    <div class="desktop-box">      
     <h1>Big News!</h1>
 
     <section class="big-news">
@@ -21,6 +31,9 @@
     <section class="small-news">
       <a href="#">
     <img src="logo.svg" alt="Photo of a">
+    <p>Some image text</p>
+    <p>Some image text</p>
+    <p>Some image text</p>
     <p>Some image text</p>
       </a>
       <a href="#">
@@ -31,6 +44,10 @@
     <img src="logo.svg" alt="Photo of a">
     <p>Some image text</p>
        </a>
+       <a href="#">
+     <img src="logo.svg" alt="Photo of a">
+     <p>Some image text</p>
+       </a> 
    </section>
     <section class="">
       <!-- The other news  -->
