--- a/code/index.html
+++ b/code/index.html
@@ -33,9 +33,7 @@
     </nav>
       <div class="meteor"></div>
       <h1>SPACE NEWS</h1>
-    </div>
   </header>
-
   <section class="big-news">
     <container class="big-img-container">
       <img src="../pictures/astronaut.jpg">
@@ -224,6 +222,7 @@
       </contaier>
   </div >
   </footer>
+</contaier>
 </body>
 
 </html>
