Changed dropdown navigation bar

--- a/code/index.html
+++ b/code/index.html
@@ -15,21 +15,19 @@
         <img src="./logo.svg" alt="Logo">
         <div class="checkbox">
           <input type="checkbox" id="hamburger">
+            <nav class="dropdown">
+              <ul>
+                  <li><a href="">Home</a></li>
+                  <li><a href="">Highlights</a></li>
+                  <li><a href="">News</a></li>
+                  <li><a href="">More</a></li>
+              </ul>
+            </nav>
           <label for="hamburger">
             <div></div>
             <div></div>
             <div></div>
           </label>
-          <div class= "dropdown-menu">
-            <div class="dropdown-conent">
-              <nav class="dropdown">
-                  <a href="">Home</a>
-                  <a href="">Highlights</a>
-                  <a href="">News</a>
-                  <a href="">More</a>
-              </nav>
-            </div>
-          </div>
         </div>
       </div>
       <div class= "header-desktop">
