--- a/code/index.html
+++ b/code/index.html
@@ -41,18 +41,127 @@
     </section>
 
     <section id="news-column">
-      <!-- Main Content; News column -->
-      news column
+      <article class="article-column">
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
+          luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum
+          facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla,
+          orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin
+          sapien justo in libero. Vestibulum mollis mauris enim. Morbi euismod
+          magna ac lorem rutrum elementum. Donec viverra auctor lobortis.
+          Pellentesque eu est a nulla placerat dignissim. Morbi a enim in magna
+          semper bibendum. Etiam scelerisque, nunc ac egestas consequat, odio
+          nibh euismod nulla, eget auctor orci nibh vel nisi. Aliquam erat
+          volutpat. Mauris vel neque sit amet nunc gravida congue sed sit amet
+          purus. Quisque lacus quam, egestas ac tincidunt a, lacinia vel velit.
+          Aenean facilisis nulla vitae urna tincidunt congue sed ut dui. Morbi
+          malesuada nulla nec purus convallis consequat. Vivamus id mollis quam.
+          Morbi ac commodo nulla. In condimentum orci id nisl volutpat bibendum.
+          Quisque commodo hendrerit lorem quis egestas. Maecenas quis tortor
+          arcu. Vivamus rutrum nunc non neque consectetur quis placerat neque
+          lobortis. Nam vestibulum, arcu sodales feugiat consectetur, nisl orci
+          bibendum elit, eu euismod magna sapien ut nibh. Donec semper quam
+          scelerisque tortor dictum gravida. In hac habitasse platea dictumst.
+          Nam pulvinar, odio sed rhoncus suscipit, sem diam ultrices mauris, eu
+          consequat purus metus eu velit. Proin metus odio, aliquam eget
+          molestie nec, gravida ut sapien. Phasellus quis est sed turpis
+          sollicitudin venenatis sed eu odio. Praesent eget neque eu eros
+          interdum malesuada non vel leo. Sed fringilla porta ligula egestas
+          tincidunt. Nullam risus magna, ornare vitae varius eget, scelerisque a
+          libero. Morbi eu porttitor ipsum. Nullam lorem nisi, posuere quis
+          volutpat eget, luctus nec massa. Pellentesque aliquam lacinia tellus
+          sit amet bibendum. Ut posuere justo in enim pretium scelerisque. Etiam
+          ornare vehicula euismod. Vestibulum at risus augue. Sed non semper
+          dolor. Sed fringilla consequat velit a porta. Pellentesque sed lectus
+          pharetra ipsum ultricies commodo non sit amet velit. Suspendisse
+          volutpat lobortis ipsum, in scelerisque nisi iaculis a. Duis pulvinar
+          lacinia commodo. Integer in lorem id nibh luctus aliquam. Sed
+          elementum, est ac sagittis porttitor, neque metus ultricies ante, in
+          accumsan. Curabitur vulputate, ligula lacinia scelerisque tempor,
+          lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class
+          aptent taciti sociosqu ad litora torquent per conubia nostra, per
+          inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere.
+          Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
+          posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et
+          magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In
+          condimentum facilisis porta. Sed nec diam eu diam mattis viverra.
+          Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris,
+          quis sollicitudin sapien justo in libero. Vestibulum mollis mauris
+          enim. Morbi euismod magna ac lorem rutrum elementum. Donec viverra
+          auctor lobortis. Pellentesque eu est a nulla placerat dignissim. Morbi
+          a enim in magna semper bibendum. Etiam scelerisque, nunc ac egestas
+          consequat, odio nibh euismod nulla, eget auctor orci nibh vel nisi.
+          Aliquam erat volutpat. Mauris vel neque sit amet nunc gravida congue
+          sed sit amet purus. Quisque lacus quam, egestas ac tincidunt a,
+          lacinia vel velit. Aenean facilisis nulla vitae urna tincidunt congue
+          sed ut dui. Morbi malesuada nulla nec purus convallis consequat.
+          Vivamus id mollis quam. Morbi ac commodo nulla. In condimentum orci id
+          nisl volutpat bibendum. Quisque commodo hendrerit lorem.
+        </p>
+        <button>Read more</button>
+      </article>
     </section>
 
     <section id="news-list">
       <!-- Extra Content; List of other news -->
-      news list
+      <article class="article-list">
+        <h2>Lorem Ipsum</h2>
+        <p>
+          Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus
+          orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci
+          tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur
+          adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui
+          sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis…
+        </p>
+      </article>
+      <article class="article-list">
+        <h2>Lorem Ipsum</h2>
+        <p>
+          Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus
+          orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci
+          tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur
+          adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui
+          sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis…
+        </p>
+      </article>
+      <article class="article-list">
+        <h2>Lorem Ipsum</h2>
+        <p>
+          Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus
+          orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci
+          tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur
+          adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui
+          sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis…
+        </p>
+      </article>
+      <article class="article-list">
+        <h2>Lorem Ipsum</h2>
+        <p>
+          Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus
+          orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci
+          tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur
+          adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui
+          sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis…
+        </p>
+      </article>
+      <article class="article-list">
+        <h2>Lorem Ipsum</h2>
+        <p>
+          Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus
+          orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci
+          tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur
+          adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui
+          sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis…
+        </p>
+      </article>
     </section>
 
     <footer>
       <!-- Links in 2 columns -->
-      footer
+      <div class="footer-links">LEFT SIDE LINKS</div>
+      <div class="footer-links">RIGHT SIDE LINKS</div>
     </footer>
   </body>
 </html>
