added more thtml pages + made footer stick on bottom of pages without content

--- a/code/index.html
+++ b/code/index.html
@@ -16,10 +16,10 @@
       <label for="checkbox"><a class="menu-button"></a>
       </label>
       <div class="menu-content"> 
-        <a href="contact.html" target="blank">contact</a>
-        <a href="contact.html" target="blank">about</a>
-        <a href="contact.html" target="blank">sign up</a>
-        <a href="contact.html" target="blank">login</a>
+        <a href="contacts.html" target="blank">contact</a>
+        <a href="about.html" target="blank">about</a>
+        <a href="signup.html" target="blank">sign up</a>
+        <a href="login.html" target="blank">login</a>
       </div>
       <div class="search-content">
       <input type="checkbox" id="searchbox" >
@@ -209,8 +209,6 @@
     </div>
     <a class="top-button" href="#top">^<br>^</a>
   </section>
-  
-
 
   <footer>
     <div class="footer-wrapper">
@@ -222,7 +220,6 @@
       </contaier>
   </div >
   </footer>
-</contaier>
 </body>
 
 </html>
