styling recent news section for desktop

--- a/code/index.html
+++ b/code/index.html
@@ -35,18 +35,45 @@
       </div>
       <div class="big-news-text">
         <h1>En rubrik i stora bokstäver</h1>
-        <p>Hlacus sagittis, lobortis in at non, tempor. Orci eu, proin dui nibh et. 
-          Facilisi ut in ullamcorper vivamus convallis mauris in viverra phasellus. 
-          Sed sagittis, ut quis ullamcorper morbi gravida consequat vitae. Diam, 
-          turpis non pretium sit eget adipiscing diam enim, ornare. Urna, ac neque 
-          amet consequat sed vitae a. Tellus amet nulla in id ultricies orci, ultrices 
-          pellentesque in. Duis porttitor consequat nunc velit, aliquam. Ultricies 
+        <p>Hlacus sagittis, lobortis in at non, tempor. Orci eu, proin dui nibh et.
+          Facilisi ut in ullamcorper vivamus convallis mauris in viverra phasellus.
+          Sed sagittis, ut quis ullamcorper morbi gravida consequat vitae. Diam,
+          turpis non pretium sit eget adipiscing diam enim, ornare. Urna, ac neque
+          amet consequat sed vitae a. Tellus amet nulla in id ultricies orci, ultrices
+          pellentesque in. Duis porttitor consequat nunc velit, aliquam. Ultricies
           augue fringilla vitae ut aenean.</p>
-          <button>Läs mer</button>
+        <button>Läs mer</button>
       </div>
     </section>
     <!-- Most recent news section -->
-    <section class="other-news-container">
+    <section class="recent-news-container">
+      <div>
+        <div class="recent-news-heading">
+          <h1>Most recent news</h1>
+        </div>
+        <div class="news-card-container">
+          <div class="news-card">
+            <img src="img.jpg" alt="">
+            <h2>En lite mindre rubrik</h2>
+            <p>text</p>
+          </div>
+          <div class="news-card">
+            <img src="img.jpg" alt="">
+            <h2>En lite mindre rubrik</h2>
+            <p>text</p>
+          </div>
+          <div class="news-card">
+            <img src="img.jpg" alt="">
+            <h2>En lite mindre rubrik</h2>
+            <p>text</p>
+          </div>
+          <div class="news-card">
+            <img src="img.jpg" alt="">
+            <h2>En lite mindre rubrik</h2>
+            <p>text</p>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
 </body>
