add media queries

--- a/code/index.html
+++ b/code/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Project 2: The News Site</title>
+  <title>Some good news</title>
   <link rel="stylesheet" href="./style.css" />
-  <!-- dont forget the meta tag for responsiveness -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -45,7 +45,7 @@
         <button>Läs mer</button>
       </div>
     </section>
-    <!-- Most recent news section -->
+    <!-- Recent news section -->
     <section class="recent-news-container">
       <div>
         <div class="recent-news-heading">
