--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,57 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>The Fashionable Update - News & inspiration from the design world</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- copy paste meta tag if not working and perhaps add Favicon -->
+
+</head>
+
+<body>
+
+
     <header>
-      <!-- Some kind of logo and navbar -->
+        <!-- Logotype and name of site -->
+        <img src="Silhuette-Logotype-with-circle.svg" alt="Logotype">
+        <h1>The Fashionable Update</h1>
+        <!-- Hamburger menu -->
+        <input id="menu" type="checkbox">
+        <label for="menu"></label>
     </header>
 
     <section class="big-news">
-      <!-- The big news content -->
+        <!-- Main news image, heading and text -->
+        <div class="main-picture">
+            <div><img src="Prada Billie Holiday.jpg" alt="Prada to design Costume for upcoming Bille Holiday movie">
+                <div>
+                    <h2>Luxury fashion house Prada has designed Billie Holiday's most iconic outfits for new biopic</h2>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget pellentesque sapien. In rutrum lorem ac tortor suscipit dictum. Quisque venenatis felis odio, eu porta est sodales ut. Nunc tempor magna id orci bibendum varius.
+                            Donec tincidunt accumsan erat in dignissim. In odio purus, vulputate sed massa sit amet, commodo vulputate velit. Etiam tellus elit, hendrerit id fermentum at, gravida eu nulla. In venenatis nulla at gravida imperdiet. Duis
+                            ac augue tortor. Praesent cursus ut eros vehicula tempor. Fusce venenatis risus enim, ac accumsan magna commodo ut. Nunc ultrices, augue vitae pulvinar malesuada, tellus sem imperdiet justo, quis maximus lacus arcu ut turpis.
+                            Proin non sapien pharetra, ultricies tortor quis, pretium leo. Quisque justo neque, iaculis porta est sed, pharetra feugiat leo. Quisque turpis velit, dignissim vel hendrerit eu, vulputate efficitur eros. Morbi odio augue,
+                            commodo at leo nec, pharetra gravida dolor. Duis nec posuere mauris. Donec mauris risus, consequat non est vehicula, dapibus dignissim ligula. Aliquam interdum ante vitae arcu aliquam, at imperdiet lacus pharetra. Mauris id
+                            accumsan ante. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum sollicitudin sapien a tempor scelerisque.
+                            Donec vitae sollicitudin lectus, ut ultricies lectus. Donec pretium laoreet dapibus. Etiam egestas, dui ac ultricies vestibulum, orci ex hendrerit nunc, vel dictum lectus mi ac velit. Quisque sed cursus arcu, quis ultricies
+                            sapien. Ut interdum sapien scelerisque augue semper efficitur.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="smaller-news">
+        <!-- The other news  -->
     </section>
-  </body>
+
+    <footer>
+        <h4>&copy 2021 The Fashionable Update</h4>
+    </footer>
+
+</body>
+
 </html>
