--- a/code/index.html
+++ b/code/index.html
@@ -23,54 +23,63 @@
     </header>
 
     <div class="main-box">
-      <section class="big-news">
+        <section class="big-news">
         <img class="big-news-img" src="images/bignewsimg.jpg" />
         <div class="big-news-text">
-          <small>Top Story</small>
+          <a href="#">
+            <small>Top Story</small>
           <h2>No new Covid-19 cases in over 6 months</h2>
           <p>
             <strong
               >Crowds celebrating on the streets world wide. Epidemiologist
               Anders Tegnell: "We are confident that we are now out of the
-              woods."</strong
-            >
+              woods."</strong>
           </p>
-          <p>Read more</p>
+          <p>Read more</p></a>
         </div>
-      </section>
+    </section>
 
       <section class="news-group">
         <div class="news-item">
+          <a href="#">
           <img class="news-img" src="images/news1.jpg" />
           <small>News</small>
           <h2 class="news-item-title">
-            100% of students from bootcamp Technigo landed jobs after graduation
-          </h2>
+            100% of students from Technigo landed jobs after graduation
+          </h2></a>
         </div>
         <div class="news-item">
+          <a href="#">
           <img class="news-img" src="images/news2.jpg" />
           <small>News</small>
           <h2 class="news-item-title">
             Newly developed pill turned out to cure hangovers
           </h2>
+        </a>
         </div>
         <div class="news-item">
+          <a href="#">
           <img class="news-img" src="images/placeholder.jpg" />
           <h2 class="news-item-title">NEWS 3</h2>
+        </a>
         </div>
         <div class="news-item">
+          <a href="#">
           <img class="news-img" src="images/placeholder.jpg" />
           <h2 class="news-item-title">NEWS 4</h2>
+        </a>
         </div>
       </section>
 
       <section class="interview">
+        <a href="#">
         <h1 class="interview-headline">INTERVJU.</h1>
         <img class="interview-img" src="images/interview-img.jpg" />
         <h2 class="interview-quote">
           Jireel: ”Jag har känt att jag måste vara där när min pappa inte är
           det”
         </h2>
+      </a>
       </section>
     </div>
 
