Animation on logo. Hover effect with box-shadow on smaller img. Changed img size to rem instead of px and %

--- a/code/index.html
+++ b/code/index.html
@@ -10,13 +10,8 @@
   </head>
   <body>
     <header>
-      <div class="hamburger">
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      
-      <img src="assets/jellyfish.png" alt="logo"> 
+
+      <img src="assets/jellyfish.png" alt="logo" class="logo"> 
 
       <h1>THE DAILY DEEP DIVE</h1>
 
@@ -26,7 +21,14 @@
         <a href="#">DEEPEST</a>
       </nav>
 
+      <div class="hamburger">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      
     </header>
+
     <section class="big-news-container">
       <img src="assets/danist-bviex5lwf3s-unsplash.jpg" alt="Jelly Fish">
       <div>
@@ -37,10 +39,10 @@
     </section>
 
     <section class="four-news-container">
+        <img src="assets/ryoji-hayasaka-NPVICB8ipdg-unsplash.jpg" alt="Jelly Fish">
         <img src="assets/jeffrey-hamilton-JtVyK2Sej2I-unsplash.jpg" alt="Jelly Fish">
-        <img src="assets/jeffrey-hamilton-JtVyK2Sej2I-unsplash.jpg" alt="Jelly Fish">
-        <img src="assets/jeffrey-hamilton-JtVyK2Sej2I-unsplash.jpg" alt="Jelly Fish">
-        <img src="assets/jeffrey-hamilton-JtVyK2Sej2I-unsplash.jpg" alt="Jelly Fish">
+        <img src="assets/connor-wang-AUUdulLnRnE-unsplash.jpg" alt="Jelly Fish">
+        <img src="assets/tim-mossholder-1xSuJgr25jM-unsplash.jpg" alt="Jelly Fish">
     </section>
 
     <section class="">
