Updated sizing of items from % to px

--- a/code/index.html
+++ b/code/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;800&family=Jacques+Francois+Shadow&display=swap" rel="stylesheet">
   </head>
   <body>
-    <header id="myHeader">
+    <header>
         <h1 class="logo">GOOD<br> NEWS<br> ONLY</h1>
       </div>
       <nav>
