Added images and captions

--- a/code/index.html
+++ b/code/index.html
@@ -30,28 +30,28 @@
     <section class="big-news">
       <!-- The big news content -->
 
-      <figure>
-        <img src="/images/nalbinding.jpg" alt="Nalbinding">
-        <figcaption>Nalbinding - Try the Viking Craft</figcaption>
-      </figure>
-
       <article>
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-        when an unknown printer took a galley of type and scrambled it to make a type 
-        specimen book. It has survived not only five centuries, but also the leap into 
-        electronic typesetting, remaining essentially unchanged. It was popularised in 
-        the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-        and more recently with desktop publishing software like Aldus PageMaker including 
-        ons of Lorem Ipsum.
+        <figure>
+          <img src="/images/60s-embroidery.jpg" alt="60's Embroidery">
+          <figcaption>"60's Embroidery &mdash; a Splash of Color"</figcaption>
+        </figure>
+
+        I found this genuine 60's embroidery kit in my grandmothers basement 
+        after she passed away. I was in awe by the bright colors and asked 
+        my mom if I could have it. The 1960's patterns are perfect if you enjoy 
+        a retro touch in your home and some fun color combinations. 
+        You can try visiting flea markets or search the second-hand webshops 
+        for original embroidery kits. Another &mdash; perhaps easier &mdash; 
+        way is to look for 1960's needlework or embroidery books and then collect 
+        the required material on your own. 
       </article>
     </section>
 
     <section class="small-news">
       <!-- The other news  -->
       <figure>
-        <img src="/images/nalbinding.jpg" alt="Nalbinding">
-        <figcaption>Nalbinding - Try the Viking Craft</figcaption>
+        <img src="/images/knitting-doll.jpg" alt="Knitting Doll">
+        <figcaption>Dig Out Your Old Knitting Doll!</figcaption>
       </figure>
 
       <figure>
@@ -60,28 +60,28 @@
       </figure>
 
       <figure>
-        <img src="/images/nalbinding.jpg" alt="Nalbinding">
-        <figcaption>Nalbinding - Try the Viking Craft</figcaption>
+        <img src="/images/origami-lamp.jpg" alt="Paper Lamp Shade">
+        <figcaption>Make your own Paper Lamp Shade</figcaption>
       </figure>
 
       <figure>
-        <img src="/images/nalbinding.jpg" alt="Nalbinding">
-        <figcaption>Nalbinding - Try the Viking Craft</figcaption>
+        <img src="/images/mobknitting.jpg" alt="Mob knitted scarf">
+        <figcaption>Mob Knitting &mdash; the New Trend</figcaption>
       </figure>
 
       <figure>
-        <img src="/images/nalbinding.jpg" alt="Nalbinding">
-        <figcaption>Nalbinding - Try the Viking Craft</figcaption>
+        <img src="/images/first-top.jpg" alt="Summer Top">
+        <figcaption>Thoughts While Knitting A Summer Top</figcaption>
       </figure>
       
       <figure>
-        <img src="/images/nalbinding.jpg" alt="Nalbinding">
-        <figcaption>Nalbinding - Try the Viking Craft</figcaption>
+        <img src="/images/striped-socks.jpg" alt="Striped Socks">
+        <figcaption>Striped Socks the Easy Way</figcaption>
       </figure>
 
       <figure>
-        <img src="/images/nalbinding.jpg" alt="Nalbinding">
-        <figcaption>Nalbinding - Try the Viking Craft</figcaption>
+        <img src="/images/Fimofun.jpg" alt="Fimo Clay Beads">
+        <figcaption>Fimo Clay Fun</figcaption>
       </figure>
 
     </section>
