--- a/previous_artists/arlo.html
+++ b/previous_artists/arlo.html
@@ -26,6 +26,7 @@
 
 <img class="img-artist" src ="../images/arlo.jpg" alt="Arlo Parks">
 <h3>Arlo Parks</h3>
+<p class="author">by Noemi, 01.01.2021</p>
     <p>Arlo Parks is a 20 year old poet/singer from London. In her words she spent most of school feeling like that black kid who couldn't 
     dance for shit, listening to too much emo music and crushing on some girl in her Spanish class. Her songs are confessional and tender, 
     mainly inspired by Portishead and Earl Sweatshirt. </p>
