--- a/code/index.html
+++ b/code/index.html
@@ -15,7 +15,7 @@
       </div>
       <nav>
         <a class="menu" href="#">NEWS</a>
-        <a class="menu" href="#">ECONOMY</a>
+        <a class="menu" href="#">TECH</a>
         <a class="menu" href="#">CULTURE</a>
         <a class="menu" href="#">SPORTS</a>
         <a class="menu" href="#">CLIMATE</a>
@@ -24,7 +24,7 @@
 
     <div class="main-box">
         <section class="big-news">
-        <img class="big-news-img" src="images/bignewsimg.jpg" />
+        <img class="big-news-img" src="images/bignewsimg.jpg" alt="Crowd celebrating in the streets"/>
         <div class="big-news-text">
           <a href="#">
             <small>Top Story</small>
@@ -42,16 +42,16 @@
       <section class="news-group">
         <div class="news-item">
           <a href="#">
-          <img class="news-img" src="images/news1.jpg" />
-          <small>News</small>
+          <img class="news-img" src="images/news1.jpg" alt="Students seated at table" />
+          <small>TECH</small>
           <h2 class="news-item-title">
             100% of students from Technigo landed jobs after graduation
           </h2></a>
         </div>
         <div class="news-item">
           <a href="#">
-          <img class="news-img" src="images/news2.jpg" />
-          <small>News</small>
+          <img class="news-img" src="images/news2.jpg" alt="Man laying in bed with hangover" />
+          <small>NEWS</small>
           <h2 class="news-item-title">
             Newly developed pill turned out to cure hangovers
           </h2>
