--- a/code/index.html
+++ b/code/index.html
@@ -31,7 +31,7 @@
       <!-- The big news content -->
 
       <article>
-        <figure>
+        <figure class="big-news">
           <img src="/images/60s-embroidery.jpg" alt="60's Embroidery">
           <figcaption>"60's Embroidery &mdash; a Splash of Color"</figcaption>
         </figure>
@@ -49,37 +49,37 @@
 
     <section class="small-news">
       <!-- The other news  -->
-      <figure>
+      <figure class="small-news">
         <img src="/images/knitting-doll.jpg" alt="Knitting Doll">
         <figcaption>Dig Out Your Old Knitting Doll!</figcaption>
       </figure>
 
-      <figure>
+      <figure class="small-news">
         <img src="/images/nalbinding.jpg" alt="Nalbinding">
         <figcaption>Nalbinding - Try the Viking Craft</figcaption>
       </figure>
 
-      <figure>
+      <figure class="small-news">
         <img src="/images/origami-lamp.jpg" alt="Paper Lamp Shade">
         <figcaption>Make your own Paper Lamp Shade</figcaption>
       </figure>
 
-      <figure>
+      <figure class="small-news">
         <img src="/images/mobknitting.jpg" alt="Mob knitted scarf">
         <figcaption>Mob Knitting &mdash; the New Trend</figcaption>
       </figure>
 
-      <figure>
+      <figure class="small-news">
         <img src="/images/first-top.jpg" alt="Summer Top">
         <figcaption>Thoughts While Knitting A Summer Top</figcaption>
       </figure>
       
-      <figure>
+      <figure class="small-news">
         <img src="/images/striped-socks.jpg" alt="Striped Socks">
         <figcaption>Striped Socks the Easy Way</figcaption>
       </figure>
 
-      <figure>
+      <figure class="small-news">
         <img src="/images/Fimofun.jpg" alt="Fimo Clay Beads">
         <figcaption>Fimo Clay Fun</figcaption>
       </figure>
