--- a/code/index.html
+++ b/code/index.html
@@ -63,7 +63,7 @@
       </div>
       <div class="other-news-item">
         <a href="#"><img id="fourth" src="https://images.unsplash.com/photo-1569745637705-76458b6bae7d?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" /></a>
-        <a href="#"><h3>Tools: Now is the time to gear up!</h3></a>
+        <a href="#"><h3>Tools: It's time to gear up!</h3></a>
       </div>
     </section>
   
